ロールAPI（GET/PUT/DELETE）のテスト追加とテスト品質改善・不具合修正
- GET/PUT/DELETE /api/roles のコントローラーテストおよびサービステストを追加
- 既存の Task テストをチェックリスト基準（1テスト1責務、AAA構造、定数管理等）で書き直し
- TaskForm の isPermanent フィールドを boolean → Boolean に修正し、
  JSON デシリアライズで true が反映されない不具合を解消
- schema.sql の AUTO_INCREMENT を SERIAL に変更し、
  H2 PostgreSQL モードでの contextLoads テスト失敗を修正